change to demo page

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 		<script type="text/javascript" src="col.js"></script>
 	</head>
 	<body>
+		<h1>Here's another bloody color picker</h1>
+		<p>It's not done yet.  I'm just experimenting with the canvas at this point.</p>
 		<div id="col-test"></div>
 		Saturation: <select id="saturation">
 			<option>1</option>
