--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 						selected.style.color = '#000';
 					else
 						selected.style.color = '#fff';
+					console.log(info);
 				}
 			}).on('mousemove', function(info){
 				var hover = document.getElementById('hover');
